--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
     <link rel="stylesheet" href="./assets/css/menu.css" />
   </head>
   <body>
-    <header class="header-white">
+    <header class="header-main" id="header">
       <div class="content-header">
-        <img
-          src="./assets/imgs/tlou/logo.png"
-          width="200"
-          alt="logo"
-          class="header-logo"
-        />
+        <h1 class="title-header">The last of us</h1>
         <img
           src="./assets/imgs/tlou/menu.png"
           width="40"
@@ -360,7 +355,7 @@
     </section>
     <footer>
       <img src="./assets/imgs/tlou/logo1.png" class="footer-logo" alt="" />
-      <span>Desevolvido por <strong>Jorge Calheiros</strong></span>
+      <span>Desenvolvido por <strong>Jorge Calheiros</strong></span>
       <div>
         <a
           href="https://github.com/jc-dev-stack"
