--- a/index.html
+++ b/index.html
@@ -20,19 +20,13 @@
           id="menu-icon"
           class="menu-icon"
         />
-
         <nav>
           <ul>
-            <a href="/"><li>The Lasf Of Us</li></a>
-            <a href="/"><li>The Last Of Us Part ||</li></a>
-            <a href="/"
-              ><li>
-                The Last of Us By <strong class="color-purple">HBO</strong>
-              </li></a
-            >
+            <a href="#sobre"><li>Sobre</li></a>
+            <a href="#personagens"><li>Personagens</li></a>
+            <a href="#estagios"><li>Estágios da infecção</li></a>
           </ul>
         </nav>
-
         <a
           href="https://www.playstation.com/pt-br/games/the-last-of-us-part-i/"
           target="_blank"
@@ -43,13 +37,9 @@
       </div>
       <nav class="menu-nav hidden-navbar" id="navbarmenu">
         <ul>
-          <a href="/"><li>The Lasf Of Us</li></a>
-          <a href="/tlou2.html"><li>The Last Of Us Part ||</li></a>
-          <a href="/"
-            ><li>
-              The Last of Us By <strong class="color-purple">HBO</strong>
-            </li></a
-          >
+          <a href="#sobre"><li>Sobre</li></a>
+          <a href="#personagens"><li>Personagens</li></a>
+          <a href="#estagios"><li>Estágios da infecção</li></a>
           <a
             href="https://www.playstation.com/pt-br/games/the-last-of-us-part-i/"
             target="_blank"
@@ -60,21 +50,7 @@
         </ul>
       </nav>
     </header>
-    <div class="bg-screen">
-      <div class="shadow-bg">
-        <div class="shadow-bg-second"></div>
-      </div>
-    </div>
-    <div class="header-secondary">
-      <nav>
-        <ul>
-          <a href="#sobre"><li>Sobre</li></a>
-          <a href="#personagens"><li>Personagens</li></a>
-          <a href="#cordyceps"><li>Fungo Cordyceps</li></a>
-          <a href="#estagios"><li>Estágios da Infecção</li></a>
-        </ul>
-      </nav>
-    </div>
+    <div class="bg-screen"><div class="bg-shadow-bottom-to-top"></div></div>
     <section id="sobre" class="section section-sobre">
       <div class="content-sipnose-image">
         <div class="content-sipnose content-section">
@@ -254,31 +230,6 @@
               </p>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section id="cordyceps" class="section section-fungo">
-      <div class="content-fungo-image">
-        <div class="content-fungo content-section">
-          <h1 class="title-section">Fungo Codyceps</h1>
-          <p class="text-section">
-            Cordyceps é um gênero de fungos que faz parte do filo Ascomycota,
-            que, por sua vez, compreende cerca de 32.300 espécies. Os
-            ascomicetos destacam-se por formarem uma estrutura reprodutora
-            saculiforme denominada asco, na qual os esporos meióticos (sexuados)
-            são formados. Esses esporos são conhecidos como ascósporos, e os
-            ascos são encontrados em corpos produtores de esporos chamados de
-            ascomas.
-          </p>
-          <h2>Cordyceps e The Last of Us</h2>
-          <p class="text-section">
-            A capacidade dos fungos Cordyceps parasitarem artrópodes e torná-los
-            verdadeiros zumbis, inspirou o jogo The Last of Us, desenvolvido
-            pela Naughty Dog e lançado para as plataformas PlayStation. No jogo,
-            uma variação do fungo infecta seres humanos, tornando-os zumbis
-            canibais. Em 2023, estreará a série da HBO baseada nesse famoso
-            jogo.
-          </p>
         </div>
       </div>
     </section>
