Organizando arquivos css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catálogo - The Last of Us</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/styles-page1.css" />
-    <link rel="stylesheet" href="./assets/css/menu.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <header class="header-main" id="header">
+    <header id="header">
       <div class="content-header">
         <h1 class="title-header">The last of us</h1>
         <img
@@ -30,7 +28,7 @@
         <a
           href="https://www.playstation.com/pt-br/games/the-last-of-us-part-i/"
           target="_blank"
-          class="button-compre"
+          class="button-comprar"
         >
           Compre já
         </a>
@@ -43,50 +41,50 @@
           <a
             href="https://www.playstation.com/pt-br/games/the-last-of-us-part-i/"
             target="_blank"
-            class="button-compre"
+            class="button-comprar"
           >
             Compre já
           </a>
         </ul>
       </nav>
     </header>
-    <div class="bg-screen"><div class="bg-shadow-bottom-to-top"></div></div>
+    <div class="header-feature">
+      <div class="header-shadow-bottom-to-top"></div>
+    </div>
     <section id="sobre" class="section section-sobre">
-      <div class="content-sipnose-image">
-        <div class="content-sipnose content-section">
-          <h1 class="title-section">Sobre</h1>
-          <p class="text-section">
-            <strong>The Last of Us</strong> é um jogo eletrônico de
-            ação-aventura e sobrevivência desenvolvido pela
-            <strong class="color-red">Naughty Dog</strong> e publicado pela Sony
-            Computer Entertainment. Ele foi lançado exclusivamente para
-            PlayStation <span class="underline">3 em 14 de junho de 2013</span>.
-            Na história, os jogadores controlam <strong>Joel</strong>, um homem
-            encarregado de escoltar uma adolescente chamada
-            <strong>Ellie</strong> através de um Estados Unidos
-            pós-apocalíptico. The Last of Us é jogado a partir de uma
-            perspectiva em terceira pessoa, com os jogadores usando armas de
-            fogo, armas improvisadas e furtividade a fim de defenderem-se de
-            humanos hostis e criaturas canibalísticas infectadas por uma mutação
-            do fungo Cordyceps. Um "Modo de Escuta" permite a localização de
-            inimigos por meio de uma escuta e percepção espacial aprimoradas.
-            Armas podem ser melhoradas usando itens recolhidos do ambiente. Há
-            um modo multijogador online em que até oito jogadores podem entrar
-            em diferentes modos de partidas cooperativas ou competitivas.
-          </p>
-          <div class="container-video">
-            <h2>Assista o trailer</h2>
-            <iframe
-              class="video"
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/gEPCEbIiuu8"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
+      <div class="content-sobre content-section">
+        <h1 class="title-section">Sobre</h1>
+        <p class="text-section">
+          <strong>The Last of Us</strong> é um jogo eletrônico de ação-aventura
+          e sobrevivência desenvolvido pela
+          <strong class="color-red">Naughty Dog</strong> e publicado pela Sony
+          Computer Entertainment. Ele foi lançado exclusivamente para
+          PlayStation <span class="underline">3 em 14 de junho de 2013</span>.
+          Na história, os jogadores controlam <strong>Joel</strong>, um homem
+          encarregado de escoltar uma adolescente chamada
+          <strong>Ellie</strong> através de um Estados Unidos pós-apocalíptico.
+          The Last of Us é jogado a partir de uma perspectiva em terceira
+          pessoa, com os jogadores usando armas de fogo, armas improvisadas e
+          furtividade a fim de defenderem-se de humanos hostis e criaturas
+          canibalísticas infectadas por uma mutação do fungo Cordyceps. Um "Modo
+          de Escuta" permite a localização de inimigos por meio de uma escuta e
+          percepção espacial aprimoradas. Armas podem ser melhoradas usando
+          itens recolhidos do ambiente. Há um modo multijogador online em que
+          até oito jogadores podem entrar em diferentes modos de partidas
+          cooperativas ou competitivas.
+        </p>
+        <div class="container-video">
+          <h2>Assista o trailer</h2>
+          <iframe
+            class="video"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/gEPCEbIiuu8"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </section>
