Formulário de feedback
ADD: Formulário de feedback

--- a/index.html
+++ b/index.html
@@ -302,6 +302,43 @@
         </div>
       </div>
     </section>
+    <section id="formulario" class="section section-feedback">
+      <div class="content-section content-feedback">
+        <h1 class="title-section">De o seu feedback</h1>
+        <div class="container-form">
+          <div class="container-input container-name">
+            <label for="name">Nome: </label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Digite seu nome:..."
+            />
+          </div>
+          <div class="container-input container-email">
+            <label for="email">Email: </label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Digite seu email:..."
+            />
+          </div>
+          <div class="container-input container-textarea">
+            <label for="feedback">Feedback</label>
+            <textarea
+              name="feedback"
+              id="feedback"
+              cols="30"
+              placeholder="De seu feedback..."
+              rows="10"
+            ></textarea>
+          </div>
+
+          <button class="button-feedback" type="button">Enviar</button>
+        </div>
+      </div>
+    </section>
     <footer>
       <img src="./assets/imgs/tlou/logo1.png" class="footer-logo" alt="" />
       <span>Desenvolvido por <strong>Jorge Calheiros</strong></span>
