--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         />
         <nav>
           <ul>
+            <a href="#inicio"><li>Inicio</li></a>
             <a href="#sobre"><li>Sobre</li></a>
             <a href="#personagens"><li>Personagens</li></a>
             <a href="#estagios"><li>Estágios da infecção</li></a>
@@ -35,6 +36,7 @@
       </div>
       <nav class="menu-nav hidden-navbar" id="navbarmenu">
         <ul>
+          <a href="#inicio"><li>Inicio</li></a>
           <a href="#sobre"><li>Sobre</li></a>
           <a href="#personagens"><li>Personagens</li></a>
           <a href="#estagios"><li>Estágios da infecção</li></a>
@@ -48,43 +50,48 @@
         </ul>
       </nav>
     </header>
-    <div class="header-feature">
-      <div class="header-shadow-bottom-to-top"></div>
-    </div>
+    <section id="inicio">
+      <div class="header-feature">
+        <div class="header-shadow-bottom-to-top"></div>
+      </div>
+    </section>
     <section id="sobre" class="section section-sobre">
       <div class="content-sobre content-section">
         <h1 class="title-section">Sobre</h1>
-        <p class="text-section">
-          <strong>The Last of Us</strong> é um jogo eletrônico de ação-aventura
-          e sobrevivência desenvolvido pela
-          <strong class="color-red">Naughty Dog</strong> e publicado pela Sony
-          Computer Entertainment. Ele foi lançado exclusivamente para
-          PlayStation <span class="underline">3 em 14 de junho de 2013</span>.
-          Na história, os jogadores controlam <strong>Joel</strong>, um homem
-          encarregado de escoltar uma adolescente chamada
-          <strong>Ellie</strong> através de um Estados Unidos pós-apocalíptico.
-          The Last of Us é jogado a partir de uma perspectiva em terceira
-          pessoa, com os jogadores usando armas de fogo, armas improvisadas e
-          furtividade a fim de defenderem-se de humanos hostis e criaturas
-          canibalísticas infectadas por uma mutação do fungo Cordyceps. Um "Modo
-          de Escuta" permite a localização de inimigos por meio de uma escuta e
-          percepção espacial aprimoradas. Armas podem ser melhoradas usando
-          itens recolhidos do ambiente. Há um modo multijogador online em que
-          até oito jogadores podem entrar em diferentes modos de partidas
-          cooperativas ou competitivas.
-        </p>
-        <div class="container-video">
-          <h2>Assista o trailer</h2>
-          <iframe
-            class="video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/gEPCEbIiuu8"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+        <div class="container-text-and-video">
+          <div class="container-video">
+            <iframe
+              class="video"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/gEPCEbIiuu8"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <p class="text-section text-sobre">
+            <strong>The Last of Us</strong> é um jogo eletrônico de
+            ação-aventura e sobrevivência desenvolvido pela
+            <strong class="color-red">Naughty Dog</strong> e publicado pela Sony
+            Computer Entertainment.<br />
+            Ele foi lançado exclusivamente para PlayStation
+            <span class="underline">3 em 14 de junho de 2013</span>. Na
+            história, os jogadores controlam <strong>Joel</strong>, um homem
+            encarregado de escoltar uma adolescente chamada
+            <strong>Ellie</strong> através de um Estados Unidos
+            pós-apocalíptico.<br />
+            The Last of Us é jogado a partir de uma perspectiva em terceira
+            pessoa, com os jogadores usando armas de fogo, armas improvisadas e
+            furtividade a fim de defenderem-se de humanos hostis e criaturas
+            canibalísticas infectadas por uma mutação do fungo Cordyceps.<br />
+            Um "Modo de Escuta" permite a localização de inimigos por meio de
+            uma escuta e percepção espacial aprimoradas. Armas podem ser
+            melhoradas usando itens recolhidos do ambiente. Há um modo
+            multijogador online em que até oito jogadores podem entrar em
+            diferentes modos de partidas cooperativas ou competitivas.
+          </p>
         </div>
       </div>
     </section>
@@ -340,6 +347,14 @@
       </div>
     </section>
     <footer>
+      <nav class="menu-footer">
+        <ul>
+          <a href="#inicio"><li>Inicio</li></a>
+          <a href="#sobre"><li>Sobre</li></a>
+          <a href="#personagens"><li>Personagens</li></a>
+          <a href="#estagios"><li>Estágios da infecção</li></a>
+        </ul>
+      </nav>
       <img src="./assets/imgs/tlou/logo1.png" class="footer-logo" alt="" />
       <span>Desenvolvido por <strong>Jorge Calheiros</strong></span>
       <div>
