--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     </section>
     <section id="formulario" class="section section-feedback">
       <div class="content-section content-feedback">
-        <h1 class="title-section">De o seu feedback</h1>
+        <h1 class="title-section">Deixe seu feedback</h1>
         <div class="container-form">
           <div class="container-input container-name">
             <label for="name">Nome: </label>
@@ -337,7 +337,7 @@
               name="feedback"
               id="feedback"
               cols="30"
-              placeholder="De seu feedback..."
+              placeholder="Deixe seu feedback..."
               rows="10"
             ></textarea>
           </div>
